--- a/src/sass/openeyes/components/theatre-diaries/schedule-group/_theatre-overview.scss
+++ b/src/sass/openeyes/components/theatre-diaries/schedule-group/_theatre-overview.scss
@@ -7,7 +7,7 @@
 		
 		.theatre-overview {
 			@include font-size(12);	
-			max-width:20%;
+			width:20%;
 			border-right:4px solid $oe-blue-dark2;
 			
 			// stretch content to ensure that colour
